:lipstick: Fix horizontal scrollbar because of submit row
Parent with flex direction column and child with width 100%
in a padded container cause horizontal scrollbars.

--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -76,8 +76,8 @@
     flex-grow: 1;
 
     .submit-row {
-      width: 100%;
       margin-top: auto;
+      margin-bottom: 0;
     }
   }
 }
